[gd_scene load_steps=3 format=2]

[ext_resource path="res://CameraControl.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 44 )

[node name="CameraControl" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Area2D" type="Area2D" parent="Camera2D"]
position = Vector2( 0, 12 )
monitorable = false
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D"]
shape = SubResource( 1 )

[node name="UpLeft" type="Position2D" parent="Camera2D"]
position = Vector2( -64, -32 )

[node name="DownRight" type="Position2D" parent="Camera2D"]
position = Vector2( 64, 56 )
[connection signal="body_exited" from="Camera2D/Area2D" to="." method="_on_Area2D_body_exited"]
